@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ This file is part of Doodle Android.
   ~
   ~ Doodle Android is free software: you can redistribute it and/or modify
@@ -16,18 +17,17 @@
   ~
   ~ Copyright (c) 2019-2023 by Patrick Zedler
   -->
-
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-  <translate
+  <objectAnimator
     android:duration="300"
-    android:startOffset="100"
     android:interpolator="@android:interpolator/fast_out_slow_in"
-    android:fromXDelta="-7.5%p"
-    android:toXDelta="0" />
-  <alpha
+    android:propertyName="translationX"
+    android:valueFrom="0"
+    android:valueTo="32dp" />
+  <objectAnimator
     android:duration="200"
-    android:startOffset="200"
     android:interpolator="@android:interpolator/fast_out_slow_in"
-    android:fromAlpha="0"
-    android:toAlpha="1" />
+    android:propertyName="alpha"
+    android:valueFrom="1"
+    android:valueTo="0" />
 </set>
